--- a/styles.css
+++ b/styles.css
@@ -300,7 +300,7 @@ h2 {
 }
 
 .preview-link {
-    margin-top: 1rem;
+    margin-bottom: 1rem;
     text-align: center;
 }
 
@@ -316,6 +316,7 @@ h2 {
 
 .preview-link a:hover {
     color: var(--secondary-color);
+    text-decoration: underline;
 }
 
 /* Footer */
